--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body, html {
     height: 100%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: #000000;
-    background-image: url(img/bgindex.jpg); 
+    background-image: url(bgindex.jpg); 
     background-size: cover;
     background-position: center; 
 }
