--- a/gallery.css
+++ b/gallery.css
@@ -5,7 +5,7 @@ body, html {
     height: 100%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: #000000;
-    background-image: url(img/bg.jpg);
+    background-image: url(bg.jpg);
     background-size: cover;
     background-position: center; 
 }
